<resources>
    <string name="app_name">World Countries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="our_world">Our World</string>
    <string name="country_flag">country flag</string>
    <string name="details">Details</string>
    <string name="learn_more">Learn more</string>
    <string name="network">Please check your internet connection!!</string>
    <string name="unknown">Something went wrong. Please try again later!!</string>
    <string name="country_details">country details</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="see_the_results">See the results</string>
    <string name="region">Region</string>
    <string name="population">Population</string>
    <string name="language">Language</string>
    <string name="car_side">Car Side</string>
    <string name="continent">Continent</string>
    <string name="apply">Apply</string>
    <string name="population_range">Population Range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="filter_apply_btn_descr">apply process</string>
    <string name="selected_filters">Selected Filters: %s</string>
    <string name="no_filter_data">It seems the country you are looking for is not on this planet.</string>
    <string name="home_sort">Sort</string>
    <string name="radio_btn_lowest_population">Lowest Population</string>
    <string name="radio_btn_highest_population">Highest Population</string>
    <string name="apply_sort">Apply</string>
    <string name="cancel_sort">Cancel</string>
    <string name="radio_btn_default">Default</string>
    <string name="find_your_country">Find your country</string>
    <string name="country">Country</string>

    <string name="overview_tab">Overview</string>
    <string name="detail_tab">Detail</string>
    <string name="maps_tab">Maps</string>
    <string name="geography">Geography</string>

    <string name="overview_common_name">Common name:</string>
    <string name="overview_official_name">Official name:</string>
    <string name="overview_capital">Capital:</string>
    <string name="overview_alt_spellings">Alt spellings:</string>
    <string name="overview_region">Region:</string>
    <string name="overview_subregion">Subregion:</string>
    <string name="overview_overview_pop">Population:</string>
    <string name="overview_landlocked">Landlocked:</string>
    <string name="overview_timezone">Timezone:</string>

    <string name="detail_location">"<b>"Location: </b></string>
    <string name="detail_map_reference">Map reference:</string>
    <string name="detail_coastline">Coastline:</string>
    <string name="detail_climate">Climate:</string>
    <string name="detail_terrain">Terrain:</string>
    <string name="detail_population_distribution">Population distribution:</string>
    <string name="detail_natural_resources">Natural resources:</string>
    <string name="detail_people">People</string>
    <string name="detail_nationality">Nationality:</string>
    <string name="detail_religion_label">Religion</string>
    <string name="detail_pop_label">Population</string>
    <string name="add_favorite_country">add favorite country</string>
    <string name="my_favorite_countries">My favorite countries</string>
    <string name="it_seems_you_don_t_have_favorite_country">It seems you don\'t have favorite country 😥</string>
    <string name="our_world_title">Our World</string>
    <string name="there_is_no_detail">There is no detail.</string>

    <style name="see_the_result">See the result</style>
    <style name="apply">Apply</style>

    <!-- ChartUtils strings -->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="age_one">Ages 0–14</string>
    <string name="age_two">Ages 15–24</string>
    <string name="age_three">Ages 25–54</string>
    <string name="age_four">Ages 55–64</string>
    <string name="age_five">Ages 65+</string>
    <string name="age_struct">Age Structure</string>
    <string name="other">other</string>
    <string name="religion">Religions</string>
    <string name="ethnic_groups">Ethnic Groups</string>

    <string name="no_pop_dist">No pop distribution</string>
    <string name="no_nation">No nationality</string>
    <string name="no_cap">No capital</string>
    <string name="no_sub_reg">No subregion</string>

    <string name="added_success">Country successfully added to favorites.</string>
    <string name="removed_success">Country successfully removed from favorites.</string>
    <string name="error_toast">Something went wrong !!</string>

    <string name="filter_cont">Continent</string>
    <string name="filter_pop">Population</string>
    <string name="filter_car_side">Car Side</string>

    <string name="fill_field_error">Please fill out this field.</string>
</resources>