<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.filter.FilterCountryListFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="title"
            type="String" />

        <variable
            name="isFilterTypeSelected"
            type="Boolean" />

        <variable
            name="isPopFilterTypeSelected"
            type="Boolean" />

        <variable
            name="isFilterButtonEnabled"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close"
            app:title="@{title}" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="@{isFilterTypeSelected ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/btn_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:visibility="gone">

            <Button
                android:id="@+id/btn_pop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingVertical="@dimen/three_level_margin"
                android:text="@string/population"
                app:cornerRadius="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btn_traffic_side"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingVertical="@dimen/three_level_margin"
                android:text="@string/car_side"
                app:cornerRadius="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btn_continent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingVertical="@dimen/three_level_margin"
                android:text="@string/continent"
                app:cornerRadius="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_filter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/one_level_margin"
            android:visibility="@{isFilterTypeSelected &amp; !isPopFilterTypeSelected ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/btn_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:visibility="gone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/two_level_margin"
            android:layout_marginTop="@dimen/one_level_margin"
            android:orientation="horizontal"
            android:visibility="@{isFilterTypeSelected &amp; isPopFilterTypeSelected ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_min_pop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/min"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_max_pop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/one_level_margin"
            android:layout_marginBottom="@dimen/one_level_margin"
            android:contentDescription="@string/filter_apply_btn_descr"
            android:enabled="@{isFilterButtonEnabled}"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="@dimen/two_level_margin"
            android:text="@{isFilterTypeSelected ? @string/apply : @string/see_the_results}"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>